--- a/timer.html
+++ b/timer.html
@@ -5,37 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홀덤 블라인드 타이머</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            background-color: black; /* 배경색 검정 */
-            color: white; /* 글씨색 하얀색 */
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .row {
-            flex: 1;
-            display: flex;
-        }
-        .column {
-            flex: 1;
-            padding: 20px;
-        }
-        .column:nth-child(2) {
-            flex: 3; /* 두 번째 열을 3배 크기로 설정 */
-        }
-        #level {
-            font-size: 40px; /* 레벨 글씨 크기 */
-            margin-top: 20px;
-        }
-        #timer {
-            font-size: 200px; /* 타이머 숫자 크게 설정 */
-            margin: 20px 0;
-        }
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 0;
+    background-color: black; /* 배경색 검정 */
+    color: white; /* 글씨색 하얀색 */
+    overflow: hidden; /* 스크롤바 숨김 */
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh; /* 뷰포트 높이에 맞춤 */
+    max-width: 100%; /* 최대 너비 100% */
+    box-sizing: border-box; /* 패딩과 테두리를 크기에 포함 */
+}
+
+.row {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap; /* 내용이 넘칠 경우 줄바꿈 */
+}
+
+.column {
+    flex: 1;
+    padding: 2vw; /* 패딩을 뷰포트 너비에 비례하여 설정 */
+}
+
+#level {
+    font-size: 8vw; /* 글씨 크기를 뷰포트 너비에 비례하여 설정 */
+    margin-top: 2vw;
+}
+
+#timer {
+    font-size: 20vw; /* 타이머 숫자 크기 조정 */
+    margin: 2vw 0;
+}
         #breakIndicator {
             font-size: 50px;
             color: red; /* 브레이크 표시 색상 */
@@ -149,11 +155,11 @@
             border-radius: 5px;
         }
 #pausedIndicator {
-    font-size: 120px; /* 글씨 크기 증가 */
+    font-size: 10vw; /* 글씨 크기 증가 */
     color: red; /* 글씨 색상 */
     border: 15px solid red; /* 빨간 선 */
     display: none; /* 초기에는 숨김 */
-    padding: 20px; /* 패딩 추가 */
+    padding: 2vw; /* 패딩 추가 */
     position: absolute; /* 절대 위치 지정 */
     top: 25%; /* 화면 중앙에 위치 */
     left: 50%; /* 화면 중앙에 위치 */
