--- a/timer.html
+++ b/timer.html
@@ -13,7 +13,7 @@
             color: white; /* 글씨색 하얀색 */
         }
 .container {
-    width: 90%; /* 전체 너비를 90%로 설정 */
+    width: 100%; /
     max-width: 600px; /* 최대 너비 설정 (필요에 따라 조정 가능) */
     margin: 0 auto; /* 중앙 정렬 */
     padding: 10px; /* 패딩 줄임 */
