--- a/timer.html
+++ b/timer.html
@@ -199,9 +199,8 @@
                 <div id="timer">00:00</div>
                 <div id="pausedIndicator" class="hidden">PAUSED</div>
                 <div id="breakIndicator">BREAK</div> <!-- 브레이크 표시 -->
-                <div><span id="blindsLabel">BLINDS:  <span id="blindsInfo"></span></span></div>
-                <div><span id="anteLabel">ANTE:  <span id="anteInfo"></span></span></div>
-                <div id="nextLevelInfo">NEXT LEVEL: LV<span id="nextLevelNumber"></span> <span id="nextLevelBlinds"></span> / ANTE: <span id="nextLevelAnte"></span></div>
+                <div><span id="blindsLabel">BLINDS:  <span id="blindsInfo"></span></span>  <span style="font-size: 25px;"> /</span> <span id="anteLabel"><span id="anteInfo"></span></span></div>
+                <div id="nextLevelInfo">NEXT LEVEL: LV<span id="nextLevelNumber"></span> <span id="nextLevelBlinds"></span> / <span id="nextLevelAnte"></span></div>
             </div>
             <div class="column">
                 <div id="controls">
