--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: white; /* 글씨색 하얀색 */
         }
         table {
-            margin: 0 auto;
+            margin: 20px auto; /* 테이블과 버튼 간격 조정 */
             border-collapse: collapse;
         }
         th, td {
@@ -28,12 +28,22 @@
             color: black; /* 입력 필드 글씨색 */
         }
         button {
-            margin-top: 20px;
+            margin: 20px 0;
+            padding: 15px 30px; /* 버튼 크기 조정 */
+            font-size: 18px; /* 버튼 글씨 크기 조정 */
+            background-color: #555; /* 버튼 배경색 */
+            color: white; /* 버튼 글씨색 */
+            border: none; /* 테두리 없애기 */
+            cursor: pointer; /* 마우스 커서 변경 */
+        }
+        button:hover {
+            background-color: #777; /* 버튼 호버 색상 */
         }
     </style>
 </head>
 <body>
     <h1>홀덤 블라인드 설정</h1>
+    <button type="button" onclick="startTimer()">플레이</button> <!-- 버튼 위치 상단으로 이동 -->
     <table>
         <thead>
             <tr>
@@ -49,7 +59,6 @@
             <!-- 자바스크립트로 레벨을 추가합니다. -->
         </tbody>
     </table>
-    <button type="button" onclick="startTimer()">플레이</button>
 
     <script>
         const blindTableBody = document.getElementById('blindTableBody');
