--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홀덤 블라인드 설정</title>
+    <title>홀덤 블라인드 타이머 설정</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,9 +28,9 @@
             color: black; /* 입력 필드 글씨색 */
         }
         button {
-            margin: 20px 0;
-            padding: 15px 30px; /* 버튼 크기 조정 */
-            font-size: 18px; /* 버튼 글씨 크기 조정 */
+            margin: 15px 0;
+            padding: 15px 15px; /* 버튼 크기 조정 */
+            font-size: 14오후 11:28 2025-01-07 화px; /* 버튼 글씨 크기 조정 */
             background-color: #555; /* 버튼 배경색 */
             color: white; /* 버튼 글씨색 */
             border: none; /* 테두리 없애기 */
