--- a/timer.html
+++ b/timer.html
@@ -232,6 +232,7 @@
                 </div>
                 <select id="chipDropdown">
                     <option value="40000">40,000</option>
+                    <option value="43000">43,000</option>
                     <option value="45000">45,000</option>
                     <option value="48000">48,000</option>
                     <option value="50000">50,000</option>
