--- a/timer.html
+++ b/timer.html
@@ -266,7 +266,7 @@
         const totalPlayersElement = document.getElementById('totalPlayers');
 
         // 알림 소리 URL
-        const alertSound = new Audio('https://github.com/handream7/holdem-timer/raw/c75699f773d6447a5b8312e782a75e80fb234930/alarm.mp3');
+        const alertSound = new Audio('alarm.mp3');
 
 
         let currentLevel = 0;
